
** Image mode

*** New commands `n' (`image-next-file') and `p' (`image-previous-file')
visit the next image file and the previous image file in the same
directory, respectively.

*** New commands to show specific frames of multi-frame images.
`f' (`image-next-frame') and `b' (`image-previous-frame') visit the
next or previous frame.  `F' (`image-goto-frame') shows a specific frame.

---
*** The command `image-mode-fit-frame' deletes other windows.
When toggling, it restores the frame's previous window configuration.
It also has an optional frame argument, which can be used by Lisp
callers to fit the image to a frame other than the selected frame.

** Info

*** New face `info-index-match' is used to highlight matches in index
entries displayed by `Info-index-next', `Info-virtual-index' and
`info-apropos'.

** Hi-Lock

*** New option `hi-lock-auto-select-face'.  When non-nil, hi-lock commands
will cycle through faces in `hi-lock-face-defaults' without prompting.

+++
*** New global command `M-s h .' (`highlight-symbol-at-point')
highlights the symbol found near point without prompting,
using the next face automatically.

** Search and Replace

*** New global command `M-s .' (`isearch-forward-symbol-at-point')
starts a symbol (identifier) incremental search forward with the
symbol found near point added to the search string initially.

*** `C-x 8 RET' in Isearch mode reads a character by its Unicode name
and adds it to the search string.

*** `M-s i' in Isearch mode toggles the variable `isearch-invisible'
between nil and the value of the option `search-invisible' (or `open'
when it's nil).

*** `query-replace' skips invisible text when `search-invisible' is nil,
and opens overlays with hidden text when `search-invisible' is `open'.

+++
*** By default, prefix arguments do not now terminate Isearch mode.
Set `isearch-allow-prefix' to nil to restore old behavior.

*** More Isearch commands accept prefix arguments, namely